Make translator stable based on contributte/translation

--- a/tests/NamespaceTranslatorTests/App/Presenters/templates/Home/default.latte
+++ b/tests/NamespaceTranslatorTests/App/Presenters/templates/Home/default.latte
@@ -7,3 +7,4 @@
 Title: {='title'|translate}
 Text: {='text'|translate}
 Počet: {='home.homeCount'|translate:['count' => 2]}
+Model: {$modelTranslation}
