Change translation resource to interface

--- a/tests/NamespaceTranslatorTests/App/Presenters/templates/Home/default.latte
+++ b/tests/NamespaceTranslatorTests/App/Presenters/templates/Home/default.latte
@@ -4,7 +4,8 @@
 
 {='message'|translate}
 
-Title: {='title'|translate}
-Text: {='text'|translate}
-Počet: {='home.homeCount'|translate:['count' => 2]}
-Model: {$modelTranslation}
+{='title'|translate}
+{='text'|translate}
+{='home.homeCount'|translate:['count' => 2]}
+{$modelTranslation}
+{$nestedTranslation}
