Improve translations handling

--- a/tests/NamespaceTranslatorTests/App/Presenters/templates/Home/default.latte
+++ b/tests/NamespaceTranslatorTests/App/Presenters/templates/Home/default.latte
@@ -4,8 +4,8 @@
 
 {='message'|translate}
 
-{='title'|translate}
-{='text'|translate}
+{='home.title'|translate}
+{='home.text'|translate}
 {='home.homeCount'|translate:['count' => 2]}
 {$modelTranslation}
 {$nestedTranslation}
