Add json loader

--- a/tests/NamespaceTranslatorTests/App/Presenters/templates/Home/default.latte
+++ b/tests/NamespaceTranslatorTests/App/Presenters/templates/Home/default.latte
@@ -9,3 +9,5 @@
 {='home.homeCount'|translate:['count' => 2]}
 {$modelTranslation}
 {$nestedTranslation}
+{='jsonMessage'|translate}
+{='prefixed.jsonMessage'|translate}
